# ghoclient

./: .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package-conda.yml  python-package.yml  python-publish.yml
docs/: GHO_data.ipynb  Makefile  conf.py  index.md  index.rst  installation.md  installation.rst  make.bat  requirements.txt  usage.md  usage.rst
ghoclient/: __init__.py  cli.py  ghoclient.py  index.py
tests/: __init__.py  test_ghoclient.py
